--- a/www.parliament.nz/9980da066e1523015230b9c154a8bf92e8822235.html
+++ b/www.parliament.nz/9980da066e1523015230b9c154a8bf92e8822235.html
@@ -7,7 +7,7 @@
 <!--[if (gte IE 10)|!(IE)]><!-->
 <html lang="en" class="no-js">
  <!--<![endif]-->
-<!-- prod p2 -->
+<!-- prod p1 -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,10 +24,10 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
-	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
+	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
 	<!--[if (lt IE 10) & (!IEMobile)]>
-		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhYg.css">
+		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhSg.css">
 	<![endif]-->
 	
 	
@@ -50,9 +50,9 @@
 	</script>
 
 	<!--[if (lte IE 9) | (IEMobile)]>
-		<script src="/content/scripts/dist/lib/matchMedia.EFJhYg.js"></script>
+		<script src="/content/scripts/dist/lib/matchMedia.EFJhSg.js"></script>
 	<![endif]-->
-			<script src="/content/scripts/dist/bootstrap.EFJhYg.js"></script>
+			<script src="/content/scripts/dist/bootstrap.EFJhSg.js"></script>
 
 
 	
@@ -504,7 +504,7 @@
 
 	<a href="/en/visit-and-learn/visit/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
 	<noscript>
 		<img src="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="" title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE" />
 	</noscript>
@@ -523,7 +523,7 @@
 
 	<a href="/en/visit-and-learn/bellamys-by-logan-brown/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
 	<noscript>
 		<img src="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="" title="Bellamys (small)" />
 	</noscript>
@@ -600,6 +600,36 @@
 							<ul class="header__mobile-footer-nav cf">
 									<li class="header__mobile-footer-nav-item">
 										<a href="/en/footer/about-us/" target="_top" class="header__mobile-footer-nav-link" title="About Us">About Us</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="header__mobile-footer-nav-link" title="Glossary">Glossary</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/faqs/" target="_top" class="header__mobile-footer-nav-link" title="FAQs">FAQs</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/jobs/" class="header__mobile-footer-nav-link" title="Careers">Careers</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/contact-us/" target="_top" class="header__mobile-footer-nav-link" title="Contact us">Contact us</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/accessibility/" target="_top" class="header__mobile-footer-nav-link" title="Accessibility">Accessibility</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/copyright/" class="header__mobile-footer-nav-link" title="Copyright">Copyright</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/privacy/" target="_top" class="header__mobile-footer-nav-link" title="Privacy">Privacy</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/alerts/" target="_top" class="header__mobile-footer-nav-link" title="Alerts">Alerts</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/website-help/" class="header__mobile-footer-nav-link" title="Website Help">Website Help</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/sitemap/" target="_blank" class="header__mobile-footer-nav-link" title="Sitemap">Sitemap</a>
 									</li>
 							</ul>
 						</div>
@@ -702,7 +732,7 @@
 				<div class="grid--tight">
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
 	<noscript>
 		<img src="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="" title="Labour Party" />
 	</noscript>
@@ -717,7 +747,7 @@
 					</div>
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="js-lazy-auto " title="Strange, Jamie"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="js-lazy-auto " title="Strange, Jamie"/>
 	<noscript>
 		<img src="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="" title="Strange, Jamie" />
 	</noscript>
@@ -731,7 +761,7 @@
 			<div class="cf">
 				<div class="document-panel hidden show--l">
 						<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
 	<noscript>
 		<img src="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="" title="Labour Party" />
 	</noscript>
@@ -739,7 +769,7 @@
 						</div>
 						<div class="document-panel__figcaption">Labour Party</div>
 											<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="js-lazy-auto " title="Strange, Jamie"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="js-lazy-auto " title="Strange, Jamie"/>
 	<noscript>
 		<img src="/media/4447/strange-jamie.DpofQg.jpg" alt="Strange, Jamie" class="" title="Strange, Jamie" />
 	</noscript>
@@ -829,7 +859,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=UUFJNAx_W4U" 
-			   id="video34253" 
+			   id="video76461" 
 			   data-video-id="UUFJNAx_W4U" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
@@ -838,7 +868,7 @@
 				<span class="figure__icon">
 					<span aria-hidden="true" class="iconf-play"></span>
 				</span>
-					<img src="/content/images/placeholder/lazyload/landscape.EFJhYg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
+					<img src="/content/images/placeholder/lazyload/landscape.EFJhSg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
 	<noscript>
 		<img src="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="" title="Maiden Speech Static Image" />
 	</noscript>
@@ -1102,6 +1132,56 @@
 							About Us
 						</a>
 					</li>
+					<li class="footer__nav-item">
+						<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="footer__nav-link" title="Glossary">
+							Glossary
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/faqs/" target="_top" class="footer__nav-link" title="FAQs">
+							FAQs
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/jobs/" class="footer__nav-link" title="Careers">
+							Careers
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/contact-us/" target="_top" class="footer__nav-link" title="Contact us">
+							Contact us
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/accessibility/" target="_top" class="footer__nav-link" title="Accessibility">
+							Accessibility
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/copyright/" class="footer__nav-link" title="Copyright">
+							Copyright
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/privacy/" target="_top" class="footer__nav-link" title="Privacy">
+							Privacy
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/alerts/" target="_top" class="footer__nav-link" title="Alerts">
+							Alerts
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/website-help/" class="footer__nav-link" title="Website Help">
+							Website Help
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/sitemap/" target="_blank" class="footer__nav-link" title="Sitemap">
+							Sitemap
+						</a>
+					</li>
 			</ul>
 
 		<a href="#" title="Back to top" class="footer__top-link js-scroll-top theme__link">
@@ -1121,6 +1201,6 @@
 		<li><a accesskey="/" href="http://www.govt.nz/" target="_blank">New Zealand Government</a></li>
 	</ul>
 
-	<script src="/content/scripts/dist/paths.2018-9-5T9-5-38.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-38.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
+	<script src="/content/scripts/dist/paths.2018-9-5T9-5-14.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-14.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
 </body>
 </html>
