--- a/www.parliament.nz/bd71195a69d3b15a6678788dd5345b32327ae696.html
+++ b/www.parliament.nz/bd71195a69d3b15a6678788dd5345b32327ae696.html
@@ -75,7 +75,7 @@
 	<div class="header">
 		<div class="wrapper cf">
 			<div class="header__primary">
-				<a href="/" class="header__masthead" title="New Zealand Parliament - Pāremata Aotearoa">
+				<a href="/en/" class="header__masthead" title="New Zealand Parliament - Pāremata Aotearoa">
 					<span class="header__title">New Zealand Parliament</span>
 					<span class="header__subtitle">Pāremata Aotearoa</span>
 				</a>
@@ -168,7 +168,7 @@
 							<ul class="megamenu" role="navigation">
 
 			<li class="megamenu__item megamenu__item--cyan">
-				<a class="megamenu__heading" title="Home" href="/"><span class="iconf-home"></span></a>
+				<a class="megamenu__heading" title="Home" href="/en/"><span class="iconf-home"></span></a>
 			</li>
 				<li class="megamenu__item megamenu__item--cyan template---ParliamentaryBusinessLanding js-megamenu-item">
 					<a href="/en/pb/" class="megamenu__heading" title="Parliamentary Business">
@@ -707,7 +707,7 @@
 
 	<ol class="nav breadcrumb">
 			<li class="breadcrumb__item">
-				<a href="/" class="breadcrumb__link theme__link" title="Home">Home</a>
+				<a href="/en/" class="breadcrumb__link theme__link" title="Home">Home</a>
 			</li>
 			<li class="breadcrumb__item">
 				<a href="/en/mps-and-electorates/" class="breadcrumb__link theme__link" title="MPs and Electorates">MPs and Electorates</a>
@@ -877,7 +877,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=45HWUO7TdkU" 
-			   id="video21538" 
+			   id="video38511" 
 			   data-video-id="45HWUO7TdkU" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
