--- a/www.parliament.nz/8be447fc3545028504d0f01d4ca18dcfffb1d3e7.html
+++ b/www.parliament.nz/8be447fc3545028504d0f01d4ca18dcfffb1d3e7.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_481009064|rpid=496690578|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -906,7 +906,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=YBrIsY-Mfeg" 
-			   id="video82967" 
+			   id="video60001" 
 			   data-video-id="YBrIsY-Mfeg" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
