--- a/www.parliament.nz/26ea08c45a1a39a35632cd13c6b570110a027f52.html
+++ b/www.parliament.nz/26ea08c45a1a39a35632cd13c6b570110a027f52.html
@@ -7,7 +7,7 @@
 <!--[if (gte IE 10)|!(IE)]><!-->
 <html lang="en" class="no-js">
  <!--<![endif]-->
-<!-- prod p1 -->
+<!-- prod p2 -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -22,12 +22,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_346727552|rpid=-584786313|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
-	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
+	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
 	<!--[if (lt IE 10) & (!IEMobile)]>
-		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhSg.css">
+		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhYg.css">
 	<![endif]-->
 	
 	
@@ -50,9 +50,9 @@
 	</script>
 
 	<!--[if (lte IE 9) | (IEMobile)]>
-		<script src="/content/scripts/dist/lib/matchMedia.EFJhSg.js"></script>
+		<script src="/content/scripts/dist/lib/matchMedia.EFJhYg.js"></script>
 	<![endif]-->
-			<script src="/content/scripts/dist/bootstrap.EFJhSg.js"></script>
+			<script src="/content/scripts/dist/bootstrap.EFJhYg.js"></script>
 
 
 	
@@ -509,7 +509,7 @@
 
 	<a href="/en/visit-and-learn/visit/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
 	<noscript>
 		<img src="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="" title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE" />
 	</noscript>
@@ -528,7 +528,7 @@
 
 	<a href="/en/visit-and-learn/bellamys-by-logan-brown/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
 	<noscript>
 		<img src="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="" title="Bellamys (small)" />
 	</noscript>
@@ -737,7 +737,7 @@
 				<div class="grid--tight">
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
 	<noscript>
 		<img src="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="" title="Labour Party" />
 	</noscript>
@@ -752,7 +752,7 @@
 					</div>
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="js-lazy-auto " title="Craig, Liz"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="js-lazy-auto " title="Craig, Liz"/>
 	<noscript>
 		<img src="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="" title="Craig, Liz" />
 	</noscript>
@@ -766,7 +766,7 @@
 			<div class="cf">
 				<div class="document-panel hidden show--l">
 						<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="js-lazy-auto " title="Labour Party"/>
 	<noscript>
 		<img src="/media/1318/logo-for-parliamentary-website.DmxK8A.jpg" alt="Labour Party" class="" title="Labour Party" />
 	</noscript>
@@ -774,7 +774,7 @@
 						</div>
 						<div class="document-panel__figcaption">Labour Party</div>
 											<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="js-lazy-auto " title="Craig, Liz"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="js-lazy-auto " title="Craig, Liz"/>
 	<noscript>
 		<img src="/media/4457/craig-liz.Dp5fuA.jpg" alt="Craig, Liz" class="" title="Craig, Liz" />
 	</noscript>
@@ -865,7 +865,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=VDcZJ9qku78" 
-			   id="video8452" 
+			   id="video23578" 
 			   data-video-id="VDcZJ9qku78" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
@@ -874,7 +874,7 @@
 				<span class="figure__icon">
 					<span aria-hidden="true" class="iconf-play"></span>
 				</span>
-					<img src="/content/images/placeholder/lazyload/landscape.EFJhSg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
+					<img src="/content/images/placeholder/lazyload/landscape.EFJhYg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
 	<noscript>
 		<img src="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="" title="Maiden Speech Static Image" />
 	</noscript>
@@ -1153,6 +1153,6 @@
 		<li><a accesskey="/" href="http://www.govt.nz/" target="_blank">New Zealand Government</a></li>
 	</ul>
 
-	<script src="/content/scripts/dist/paths.2018-9-5T9-5-14.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-14.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
+	<script src="/content/scripts/dist/paths.2018-9-5T9-5-38.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-38.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
 </body>
 </html>
