--- a/www.parliament.nz/729a59ea39a6a5df6245088c53a03462d9b8643b.html
+++ b/www.parliament.nz/729a59ea39a6a5df6245088c53a03462d9b8643b.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-105077500|rpid=-1483888079|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -732,7 +732,7 @@
 
 <a class="btn btn--float-v-align theme__btn alert__btn alert__btn-content" href="/en/alerts/maintenance/create-alert/content/14428">Get notifications</a>
 			</div>
-				<span class="publish-date"><strong>Published date:</strong> 7 Sep 2018</span>
+				<span class="publish-date"><strong>Published date:</strong> 21 Sep 2018</span>
 			<div class="document-panel-mobile hidden--l">
 				<div class="grid--tight">
 					<div class="grid__item one-half">
@@ -853,7 +853,7 @@
 <p>Civil Defence</p>
 </td>
 <td width="205">
-<p>Minister</p>
+<p><span>Minister</span></p>
 </td>
 <td width="100">
 <p>26/10/2017</p>
@@ -868,6 +868,17 @@
 </td>
 <td width="100">
 <p>26/10/2017</p>
+</td>
+</tr>
+<tr>
+<td width="206">
+<p>Customs</p>
+</td>
+<td width="205">
+<p>Minister</p>
+</td>
+<td width="100">
+<p>20/09/2018</p>
 </td>
 </tr>
 <tr>
@@ -942,7 +953,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=kzoFDX9tFRk" 
-			   id="video3741" 
+			   id="video78098" 
 			   data-video-id="kzoFDX9tFRk" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
