200 OK https://www.parliament.nz/en/mps-and-electorates/members-of-parliament/ross-jami-lee/

--- a/www.parliament.nz/61f4d8b6a4bd993501fb8092856ee8b41538dcff.html
+++ b/www.parliament.nz/61f4d8b6a4bd993501fb8092856ee8b41538dcff.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_1928858626|rpid=-1647559254|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -931,7 +931,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=3mK7LMZPziU" 
-			   id="video10185" 
+			   id="video34698" 
 			   data-video-id="3mK7LMZPziU" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
