200 OK https://www.parliament.nz/en/mps-and-electorates/members-of-parliament/whaitiri-meka/

--- a/www.parliament.nz/cbbfb9c2bf1231d1eaa4d40f7e1d4a692a6c465a.html
+++ b/www.parliament.nz/cbbfb9c2bf1231d1eaa4d40f7e1d4a692a6c465a.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-1944794538|rpid=396744441|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -732,7 +732,7 @@
 
 <a class="btn btn--float-v-align theme__btn alert__btn alert__btn-content" href="/en/alerts/maintenance/create-alert/content/14295">Get notifications</a>
 			</div>
-				<span class="publish-date"><strong>Published date:</strong> 20 Jun 2018</span>
+				<span class="publish-date"><strong>Published date:</strong> 21 Sep 2018</span>
 			<div class="document-panel-mobile hidden--l">
 				<div class="grid--tight">
 					<div class="grid__item one-half">
@@ -826,78 +826,6 @@
 <thead>
 <tr>
 <td width="206">
-<p>Portfolio</p>
-</td>
-<td width="205">
-<p>Role</p>
-</td>
-<td width="100">
-<p>Start</p>
-</td>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td width="206">
-<p>Agriculture</p>
-</td>
-<td width="205">
-<p>Associate Minister</p>
-</td>
-<td width="100">
-<p>26/10/2017</p>
-</td>
-</tr>
-<tr>
-<td width="206">
-<p>Crown/Māori Relations</p>
-</td>
-<td width="205">
-<p>Associate Minister</p>
-</td>
-<td width="100">
-<p>26/10/2017</p>
-</td>
-</tr>
-<tr>
-<td width="206">
-<p>Customs</p>
-</td>
-<td width="205">
-<p>Minister</p>
-</td>
-<td width="100">
-<p>26/10/2017</p>
-</td>
-</tr>
-<tr>
-<td width="206">
-<p>Forestry</p>
-</td>
-<td width="205">
-<p>Associate Minister</p>
-</td>
-<td width="100">
-<p>02/05/2018</p>
-</td>
-</tr>
-<tr>
-<td width="206">
-<p>Local Government</p>
-</td>
-<td width="205">
-<p>Associate Minister</p>
-</td>
-<td width="100">
-<p>26/10/2017</p>
-</td>
-</tr>
-</tbody>
-</table>
-<table border="0" width="0">
-<thead>
-<tr>
-<td width="206">
 <p>Select Committee</p>
 </td>
 <td width="205">
@@ -922,12 +850,123 @@
 </tr>
 </tbody>
 </table>
+<div class="figure figure--video js-video-player one-whole">
+		<div class="figure__container">
+			<a href="http://www.youtube.com/watch?v=5jG4XhIhhe4" 
+			   id="video35087" 
+			   data-video-id="5jG4XhIhhe4" 
+			   class="js-video js-video-pane video-pane" 
+			   data-autoplay="true" 
+			   target="_blank">
+			
+				<span class="figure__icon">
+					<span aria-hidden="true" class="iconf-play"></span>
+				</span>
+					<img src="/content/images/placeholder/lazyload/landscape.EFJhYg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
+	<noscript>
+		<img src="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="" title="Maiden Speech Static Image" />
+	</noscript>
+
+			</a>
+		</div>
+
+	</div>
 	<div class="c-expand-collapse o-control">
 		<div class="accordion js-expand-collapse">
 			<h3 class="accordion__header js-expand-collapse__header u-rel">Former Roles</h3>
 			<div class="accordion__body js-expand-collapse__body">
 				<div class="body-text body-text--pub">
-					<table border="0" width="0">
+					<table border="0" height="350" style="width: 619px;">
+<thead>
+<tr>
+<td style="width: 217px;">
+<p>Portfolio</p>
+</td>
+<td style="width: 201px;">
+<p>Role</p>
+</td>
+<td style="width: 89px;">
+<p>Start</p>
+</td>
+<td style="width: 102px;">
+<p>End</p>
+</td>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="width: 217px;">
+<p>Agriculture</p>
+</td>
+<td style="width: 201px;">
+<p>Associate Minister</p>
+</td>
+<td style="width: 89px;">
+<p>26/10/2017</p>
+</td>
+<td style="width: 102px;">
+<p>20/09/2018</p>
+</td>
+</tr>
+<tr>
+<td style="width: 217px;">
+<p>Crown/Māori Relations</p>
+</td>
+<td style="width: 201px;">
+<p>Associate Minister</p>
+</td>
+<td style="width: 89px;">
+<p>26/10/2017</p>
+</td>
+<td style="width: 102px;">
+<p><span>20/09/2018</span></p>
+</td>
+</tr>
+<tr>
+<td style="width: 217px;">
+<p>Customs</p>
+</td>
+<td style="width: 201px;">
+<p>Minister</p>
+</td>
+<td style="width: 89px;">
+<p>26/10/2017</p>
+</td>
+<td style="width: 102px;">
+<p><span>20/09/2018</span></p>
+</td>
+</tr>
+<tr>
+<td style="width: 217px;">
+<p>Forestry</p>
+</td>
+<td style="width: 201px;">
+<p>Associate Minister</p>
+</td>
+<td style="width: 89px;">
+<p>02/05/2018</p>
+</td>
+<td style="width: 102px;">
+<p><span>20/09/2018</span></p>
+</td>
+</tr>
+<tr>
+<td style="width: 217px;">
+<p>Local Government</p>
+</td>
+<td style="width: 201px;">
+<p>Associate Minister</p>
+</td>
+<td style="width: 89px;">
+<p>26/10/2017</p>
+</td>
+<td style="width: 102px;">
+<p><span>20/09/2018</span></p>
+</td>
+</tr>
+</tbody>
+</table>
+<table border="0" width="0">
 <thead>
 <tr>
 <td width="205">
@@ -1170,8 +1209,8 @@
 		<div class="related-links__item stretch">
 
 			<span class="related-links__icon iconf-link" aria-hidden="true"></span>
-			<a href="https://www.beehive.govt.nz/minister/hon-meka-whaitiri" class="related-links__link theme__link" target="_blank">
-				Minister’s Beehive Website Page
+			<a href="https://www.parliament.nz/en/watch-parliament/ondemand?keyword=&amp;from=&amp;to=&amp;subject=&amp;person=340&amp;stage=" class="related-links__link theme__link">
+				See this MP on Parliament TV
 			</a>
 
 		</div>
@@ -1182,16 +1221,6 @@
 						<span class="related-links__link">View All</span>
 					</a>
 				</li>
-	<li class="flex-grid__item m-one-half js-related-links-more-item" style="display: none;">
-		<div class="related-links__item stretch">
-
-			<span class="related-links__icon iconf-link" aria-hidden="true"></span>
-			<a href="https://www.parliament.nz/en/watch-parliament/ondemand?keyword=&amp;from=&amp;to=&amp;subject=&amp;person=340&amp;stage=" class="related-links__link theme__link">
-				See this MP on Parliament TV
-			</a>
-
-		</div>
-	</li>
 	<li class="flex-grid__item m-one-half js-related-links-more-item" style="display: none;">
 		<div class="related-links__item stretch">
 
