200 OK https://www.parliament.nz/en/mps-and-electorates/members-of-parliament/scott-alastair/

--- a/www.parliament.nz/61b3fd14ccc5d9a9b1cd251fb7551b8c4fb04d1c.html
+++ b/www.parliament.nz/61b3fd14ccc5d9a9b1cd251fb7551b8c4fb04d1c.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_1463526213|rpid=1366072671|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537756700065|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_1463526213|rpid=-1131955653|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537756700065|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
@@ -555,14 +555,15 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
+				<a href="/en/watch-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
+					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/pb/meetings-of-parliament/">
+				<a href="/en/watch-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -579,7 +580,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -587,7 +588,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
+		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -647,14 +648,15 @@
 
 	<div class="header__house-session hidden--l show--xl">
 			<div class="house-session__status rel figure">
-				<a href="/en/pb/meetings-of-parliament/" class="hidden show--l">
+				<a href="/en/watch-parliament/" class="hidden show--l">
 					<img src="/media/4524/debating-chamber-7-nov-2017.jpg?center=0.43428571428571427,0.49892933618843682&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131546096540000000" alt="The debating chamber." title="Debating chamber 7 November 2017" class="house-session__img" />
 				</a>
 
+					<span class="session-status house-session__flag">Live</span>
 							</div>
 
 			<div class="house-session__summary">
-				<a href="/en/pb/meetings-of-parliament/">
+				<a href="/en/watch-parliament/">
 					<span class="house-session__text">The House is meeting today</span>
 				</a>
 			</div>
@@ -671,7 +673,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/ondemand" class="quick-links__link theme__bg--hover">
+		<a href="/en/watch-parliament/" class="quick-links__link theme__bg--hover">
 			<span class="quick-links__icon iconf-play" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Watch
@@ -679,7 +681,7 @@
 		</a>
 	</li>
 	<li class="quick-links__item">
-		<a href="/en/watch-parliament/audio" class="quick-links__link theme__bg--hover ">
+		<a href="http://www.radionz.co.nz/audio/live/parliament" class="quick-links__link theme__bg--hover js-audio-play">
 			<span class="quick-links__icon iconf-headphones" aria-hidden="true"></span>
 			<span class="quick-links__text">
 				Listen
@@ -892,7 +894,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=DVhEnmkwmAY" 
-			   id="video87410" 
+			   id="video73462" 
 			   data-video-id="DVhEnmkwmAY" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
